--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js" defer></script>
-    <!-- Dexie.js para Cache no IndexedDB (Mantido, mas agora importado via module) -->
-    <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
+    
+    <!-- 
+      CORREÇÃO: Removida a tag <script> do Dexie.js daqui. 
+      Ele agora é importado corretamente como um módulo dentro de 'src/services/cache.js'.
+      Isso evita o conflito e o erro de sintaxe.
+    -->
+    <!-- <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script> -->
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
