--- a/edit.html
+++ b/edit.html
@@ -162,8 +162,9 @@
             <div id="content-conciliar" class="hidden fade-in">
                 <div class="card">
                     <div class="flex border-b mb-6">
-                        <button class="sub-nav-btn active" data-subtab-conciliar="conciliacao_unidade">Conciliação da Unidade</button>
-                        <button class="sub-nav-btn" data-subtab-conciliar="conciliacao_sobras">Conciliar com Sobras</button>
+                        <!-- CORREÇÃO DE BUG: Renomeando data-subtab-conciliar para corresponder aos IDs dos painéis -->
+                        <button class="sub-nav-btn active" data-subtab-conciliar="unidade">Conciliação da Unidade</button>
+                        <button class="sub-nav-btn" data-subtab-conciliar="sobras">Conciliar com Sobras</button>
                         <button class="sub-nav-btn" data-subtab-conciliar="itens_a_tombar">Itens S/T a Tombar</button>
                     </div>
                     
