--- a/edit.html
+++ b/edit.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -765,6 +765,10 @@
 
                 <h4 class="font-bold text-slate-800">Ligar com qual item do Sistema?</h4>
                 <p class="text-sm text-slate-600">Selecione o item correto da unidade <strong id="manual-link-unit-name"></strong> que deve corresponder ao item acima.</p>
+                <!-- Mensagem de feedback do filtro por localização -->
+                <div id="manual-link-filter-message" class="text-sm p-2 bg-blue-50 border-blue-200 border rounded-lg">
+                    Listando todos os itens S/T desta unidade.
+                </div>
                 <div>
                     <label for="manual-link-system-item-select" class="block text-sm font-medium mb-1">Itens do Sistema nesta Unidade:</label>
                     <select id="manual-link-system-item-select" class="w-full p-2 border rounded-lg bg-white">
