--- a/edit.html
+++ b/edit.html
@@ -95,6 +95,13 @@
                             <input type="text" id="edit-filter-descricao" class="w-full p-2 border rounded-lg" placeholder="Digite para buscar...">
                         </div>
                     </div>
+                    <!-- NOVO CAMPO DE FILTRO DE LOCALIZAÇÃO -->
+                    <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-4 pt-4 border-t">
+                        <div>
+                            <label for="edit-filter-localizacao" class="block text-sm font-medium mb-1">Filtrar por Localização</label>
+                            <input type="text" id="edit-filter-localizacao" class="w-full p-2 border rounded-lg" placeholder="Ex: Sala de Reunião, Cozinha...">
+                        </div>
+                    </div>
                     <div class="flex flex-wrap items-center gap-4">
                         <button id="save-all-changes-btn" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 disabled:bg-slate-400 flex items-center gap-2" disabled>
                             <span id="save-btn-spinner" class="hidden saving-spinner"></span>
