--- a/edit.html
+++ b/edit.html
@@ -537,7 +537,7 @@
                             <li><strong>Passo 1:</strong> Selecione o <strong>Tipo de Unidade</strong> (ex: "CRAS") para definir o contexto.</li>
                             <li><strong>Passo 2:</strong> Cole sua planilha (com a coluna "Unidade").</li>
                             <li><strong>Passo 3:</strong> O sistema identificará as unidades na planilha e sugerirá o mapeamento para as unidades do sistema (ex: Planilha "CRAS COHAB" ➔ Sistema "CRAS COHAB").</li>
-                            <li><strong>Passo 4:</strong> Você confirma os mapeamentos e o sistema gera as ações (Criar, Atualizar, Excluir) para *todas* as unidades confirmadas.</li>
+                            <li><strong>Passo 4:</strong> Você confirma os mapeamentos e o sistema gera as ações (Criar, Excluir) para *todas* as unidades confirmadas.</li>
                             <li><strong>Passo 5:</strong> Você revisa e executa o lote.</li>
                         </ol>
 
@@ -553,7 +553,7 @@
                          <div class="mb-4">
                             <label for="bulk-replace-data" class="block text-base font-semibold mb-2 text-slate-800">Passo 2: Cole os dados do Excel aqui (com cabeçalho)</label>
                             <p class="text-xs text-slate-500 mb-2">
-                                O sistema espera as colunas: <strong>Tipo</strong>, <strong>Tombamento</strong>, <strong>Descrição</strong>, <strong>Unidade</strong>, <strong>Quantidade</strong>, <strong>Localização</strong>, <strong>Estado</strong>, <strong>Origem da Doação</strong>, <strong>Observação</strong>, <strong>Fornecedor</strong>.
+                                O sistema espera as colunas: <strong>Tipo</strong>, <strong>Tombamento</strong>, <strong>Descrição</strong>, <strong>Unidade</strong>, <strong>Localização</strong>, <strong>Estado</strong>, <strong>Origem da Doação</strong>, <strong>Observação</strong>, <strong>Fornecedor</strong>.
                             </p>
                             <textarea id="bulk-replace-data" rows="8" class="w-full p-2 border rounded-lg font-mono text-xs" placeholder="Copie as colunas do Excel, incluindo o cabeçalho, e cole aqui..."></textarea>
                          </div>
